fixed overflow

--- a/cupcake/src/main/webapp/styleSheet/CreateBorder.css
+++ b/cupcake/src/main/webapp/styleSheet/CreateBorder.css
@@ -1,11 +1,12 @@
 .makeBorder{
+    margin-top: 0px;
    border-style: solid;
    border-color: black;
    padding: 10px;
    border-radius: 8px;
    box-shadow: 5px 10px;
    position: fixed;
-   max-height: 600px;
+   max-height: 75%;
    overflow: auto;
 }
 
